# inf_rk

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  args_check.c  args_check.h  cmake_install.cmake  main.c  main.h  medium.txt  rk
includes/: args_check.h  main.h  statistic.h
src/: args_check.c  statistic.c
texts/: hard.txt  help.txt  medium.txt
